--- a/pages/index.html
+++ b/pages/index.html
@@ -123,8 +123,8 @@
 
                     <div class="right">
                         <div class="type-food">
-                            <button class="type-food-eat active">Đồ ăn</button>
-                            <button class="type-food-drink">Nước, bánh</button>
+                            <button class="type-food-eat active" id="food">Đồ ăn</button>
+                            <button class="type-food-drink" id="drink">Nước, bánh</button>
                         </div>
                         <div class="list">
                             <div class="food">
@@ -179,5 +179,5 @@
 
     </div>
 </body>
-
+<script src="../js/index.js"></script>
 </html>
