--- a/pages/signin_page.html
+++ b/pages/signin_page.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="../css/signin.css">
 </head>
 
 <body>
@@ -15,31 +15,34 @@
       <img src="https://saodieu.vn/media/Bai%20Viet%20-%20T62016/Saodieu%20-%2010%20mon%20an%201.jpg" alt="">
     </div>
     <!--  -->
-    <form class="form" action="index.html">
+    <form class="form">
       <div class="logo-image">
         <img src="../assets/img/logo.png" alt="">
       </div>
       <div class="location">
-        <div class="chao">Xin chào!!!</div>
         <div class="loca"><img src="../assets/img/location.png" alt=""></div>
       </div>
       <div class="inp">
-        <input type="text" name="ten_tai_khoan" placeholder="Tên đăng nhập">
+        <input type="text" placeholder="Mã nhân viên (đã được cung cấp)">
       </div>
       <div class="inp">
-        <input type="password" name="mat_khau" placeholder="Mật khẩu">
+        <input type="text" placeholder="Tên đăng nhập">
+      </div>
+      <div class="inp">
+        <input type="password" placeholder="Mật khẩu">
         <div class="hide">Hiện</div>
       </div>
+      <div class="inp">
+        <input type="text" placeholder="Số điện thoại">
+      </div>
+      <div class="inp">
+        <input type="text" placeholder="Loại tài khoản">
+      </div>
       <div class="btn">
-          
-          <button type="submit"> 
-            Đăng nhập
-          </button>
-        
-        </div>
+        <button>Đăng ký</button>
+      </div>
       <div class="bottom">
-        <a href="../pages/signin_page.html">Tạo tài khoản</a>
-        <a href="../pages/signin_page.html">Quên mật khẩu</a>
+        <div>Bạn đã có tài khoản. <a href="../pages/login_page.html">ĐĂNG NHẬP NGAY</a></div>
       </div>
     </form>
     <!--  -->
