--- a/pages/thanh_toan.html
+++ b/pages/thanh_toan.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="../css/grid.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/thanh_toan.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
 </head>
 
 <body>
@@ -122,65 +125,27 @@
                     </div>
 
                     <div class="right">
-                        <div class="type-food">
-                            <button class="type-food-eat active" id="food">Đồ ăn</button>
-                            <button class="type-food-drink" id="drink">Nước, bánh</button>
+                        <div class="list_menu">
+                            <p >Mã đơn: 065</p>
                         </div>
-                        <div class="list">
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
-                            <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
-                                <div class="name">Mì quảng</div>
-                                <div class="id">125</div>
-                                <span class="price">300000 <div class="coin">VND</div> </span>
-                                <button class="add">Thêm</button>
-                            </div>
+                        <div class="list_menu">
+                            <p class="list_product">Sản phẩm</p>
+                            <p class="list_product">Số lượng</p>
+                            <p class="list_product">Đơn giá</p>
+                            <p class="list_product">Tổng tiền</p>
                         </div>
+                        <div class="list_menu">
+                            <p class="list_product">Sản phẩm</p>
+                            <p class="list_product">2</p>
+                            <p class="list_product">10000 VND</p>
+                            <p class="list_product">20000 VND</p>
+                        </div>
+                        
                     
                     </div>
 
                 </div>
             </div>
-            <a href="">
-
-                <div class="cart">
-                    <img src="../assets/img/cart-svgrepo-com.svg" class="svg"/>
-                </div>
-            </a>
         </div>
 
     </div>
