--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -220,7 +220,7 @@
 							</tr>
 						</table>
 						<p class="sum">Tong cong : 232d</p>
-						  <button class="thanh-toan"> <a href="">Thanh toan</a> </button>
+						  <button class="thanh-toan"> <a href="../pages/payment.html">Thanh toan</a> </button>
 					</div>
 
 
