--- a/pages/index.html
+++ b/pages/index.html
@@ -87,10 +87,7 @@
                                     <!-- <a href="#" class="category-item__link">Trang chủ</a> -->
                                 </li>
                                 <li class="category-item">
-                                    <button class="category-item__link"
-
-                                       
-                                            class="category-item__link">Thực đơn
+                                    <button class="category-item__link" class="category-item__link">Thực đơn
 
                                     </button>
                                     <!-- <a href="#" class="category-item__link">Thực đơn</a> -->
@@ -128,57 +125,69 @@
                         </div>
                         <div class="list">
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                             <div class="food">
-                                <div class="image"><img src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="mi"></div>
+                                <div class="image"><img
+                                        src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                                        alt="mi"></div>
                                 <div class="name">Mì quảng</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
                             </div>
                         </div>
-                    
+
                     </div>
 
                 </div>
             </div>
-            <a href="">
-
+            <a href="../pages/dashboard.html">
                 <div class="cart">
-                    <img src="../assets/img/cart-svgrepo-com.svg" class="svg"/>
+                    <img src="../assets/img/cart-svgrepo-com.svg" class="svg">
+                    <p>1</p>
                 </div>
             </a>
         </div>
@@ -186,4 +195,5 @@
     </div>
 </body>
 <script src="../js/index.js"></script>
+
 </html>
