--- a/pages/drink.html
+++ b/pages/drink.html
@@ -120,15 +120,15 @@
 
                     <div class="right">
                         <div class="type-food">
-                            <button class="type-food-eat active" id="food">Đồ ăn</button>
-                            <button class="type-food-drink" id="drink"><a href="../pages/drink.html" style="text-decoration: none; color: #39B1E4;">Nước, bánh</a> </button>
+                            <button class="type-food-eat " id="food"><a href="../pages/index.html" style="text-decoration: none; color: #39B1E4;">Đồ ăn</a></button>
+                            <button class="type-food-drink active" id="drink">Nước, bánh</button>
                         </div>
                         <div class="list">
                             <div class="food">
                                 <div class="image"><img
                                         src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
                                         alt="mi"></div>
-                                <div class="name">Mì quảng</div>
+                                <div class="name">Thuc uong 1</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
@@ -137,7 +137,7 @@
                                 <div class="image"><img
                                         src="https://images.unsplash.com/photo-1664574654589-8f6c9b94c02d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
                                         alt="mi"></div>
-                                <div class="name">Mì quảng</div>
+                                <div class="name">Thuc uong 2</div>
                                 <div class="id">125</div>
                                 <span class="price">300000 <div class="coin">VND</div> </span>
                                 <button class="add">Thêm</button>
