--- a/pages/payment.html
+++ b/pages/payment.html
@@ -120,7 +120,7 @@
 						</nav>
 					</div>
 					<div class="top-text">
-						<p class="id">Mã đơn : 43289</p>
+						<!-- <p class="id">Mã đơn : 43289</p> --> 
 						<!-- <button class="thanh-toan"><img src="https://upload.wikimedia.org/wikipedia/vi/thumb/f/fe/MoMo_Logo.png/220px-MoMo_Logo.png" alt=""><a href="">Momo</a></button> -->
 						<!-- <a href=""><img src="https://upload.wikimedia.org/wikipedia/vi/thumb/f/fe/MoMo_Logo.png/220px-MoMo_Logo.png" alt="">Facebook</a> -->
                         <div class="payment_list">
