--- a/login_page.html
+++ b/login_page.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/signin.css">
+  <link rel="stylesheet" href="./assets/css/login.css">
 </head>
 
 <body>
@@ -15,31 +15,31 @@
       <img src="https://saodieu.vn/media/Bai%20Viet%20-%20T62016/Saodieu%20-%2010%20mon%20an%201.jpg" alt="">
     </div>
     <!--  -->
-    <form class="form">
+    <form class="form" action="index.html">
       <div class="logo-image">
-        <img src="../assets/img/logo.png" alt="">
+        <img src="./assets/img/logo.png" alt="">
       </div>
       <div class="location">
-        <div class="loca"><img src="../assets/img/location.png" alt=""></div>
+        <div class="chao">Xin chào!!!</div>
+        <div class="loca"><img src="./assets/img/location.png" alt=""></div>
       </div>
       <div class="inp">
-        <input type="text" placeholder="Tên đăng nhập">
+        <input type="text" name="ten_tai_khoan" placeholder="Tên đăng nhập">
       </div>
       <div class="inp">
-        <input type="password" placeholder="Mật khẩu">
+        <input type="password" name="mat_khau" placeholder="Mật khẩu">
         <div class="hide">Hiện</div>
       </div>
-      <div class="inp">
-        <input type="text" placeholder="Số điện thoại">
-      </div>
-      <div class="inp">
-        <input type="text" placeholder="Loại tài khoản">
-      </div>
       <div class="btn">
-        <button>Đăng ký</button>
-      </div>
+          
+          <button type="submit"> 
+            Đăng nhập
+          </button>
+        
+        </div>
       <div class="bottom">
-        <div>Bạn đã có tài khoản. <a href="../pages/login_page.html">ĐĂNG NHẬP NGAY</a></div>
+        <a href="./signin_page.html">Tạo tài khoản</a>
+        <a href="./signin_page.html">Quên mật khẩu</a>
       </div>
     </form>
     <!--  -->
